2004-11-26  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/algebramenu.xml.in: replace algebra by math
	* docs/spip_oneboard.xsl: updated, fixed web site
	* docs/spipparser.pl: - 
	* docs/website/article.html: added the spip web site here.
	* docs/website/gcompris.css:
	* docs/website/rubrique.html:
	* docs/website/sommaire.html:
	* docs/screenshots: added. needed for the web site and in the future for the documentation

2004-11-22  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/chronos/board3_0.xml.in: updated by Frank
	* boards/chronos/board4_0.xml.in: -
	* boards/chronos/board4_1.xml.in: -
	* docs/spip_menuboard.xsl: updated, fixed bug
	* docs/spip_oneboard.xsl: -
	* docs/spipparser.pl: -
	* po/ChangeLog:

2004-11-21  Bruno coudoin  <bruno.coudoin@free.fr>

	complete the work on screenshots creation.
	First release of the screenshots are online on http://gcompris.net
	
	* docs/.cvsignore:
	* docs/spip_menuboard.xsl:
	* docs/spip_oneboard.xsl:
	* docs/spipparser.pl:

2004-11-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/create_thumbnails.pl: created, to create thumbnails
	* docs/spip_menuboard.xsl: updated. now can create the thumbnails. needs the links now.
	* docs/spipparser.pl: updated.
	* src/boards/click_on_letter.c: (click_on_letter_create_item): fixed alphabet.

2004-11-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/wordsgame.c: (pause_board), (start_board),
	(wordsgame_next_level), (wordsgame_move_item),
	(wordsgame_move_items), (player_win): improved the drop speed to
	change speed and fallspeed when list of words on screen is empty 
	(player typed words more fast when it drops).
	May be adjust increment min and max speed by change #define constants.
	Done by Alexey Lubimov

2004-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/Makefile.am: added spip utility
	* docs/spip_oneboard.xsl: created this tool to create the screenshot web site in spip format
	* docs/spipparser.pl: -