@@ -5,14 +5,14 @@
     <_name>Transportation</_name>
   </Title>
   <Title x="360" y="400" justification="GTK_JUSTIFY_CENTER">
-    <_name>Place each image in the order and\n
-on the date it has been invented.\n
-If not sure, check online in wikipedia at\n
+    <_name xml:space="preserve">Place each image in the order and
+on the date it has been invented.
+If not sure, check online in wikipedia at
 http://www.wikipedia.org</_name>
   </Title>
   <Shape zoomy="1" zoomx="1" y="240" x="520" sound="Undefined" position="0" pixmapfile="chronos/images/fardier.png" name="C"/>
   <Title y="300" x="510" justification="GTK_JUSTIFY_CENTER"><name>1769</name></Title>
-  <Shape zoomy="1" zoomx="1" y="100" x="250" sound="Undefined" position="0" pixmapfile="gcompris/misc/st_rocket.png" name="G"/>
+  <Shape zoomy="1" zoomx="1" y="100" x="250" sound="Undefined" position="0" pixmapfile="chronos/images/st_rocket.png" name="G"/>
   <Title y="205" x="240" justification="GTK_JUSTIFY_CENTER"><name>1758</name></Title>
 </ShapeGame>
 
