@@ -11,20 +11,20 @@
 	 <_prerequisite>GCompris is a collection of educational games that provides different activities to
 children from 3 to 8 years old.</_prerequisite>
 	 <_goal>The goal of gcompris is to provide a free alternative to popular proprietary edutainment software</_goal>
-	 <_manual>A simple click on an icon brings you to an activity or a menu of activities.\n
-At the bottom of the screen is the gcompris control bar.\n
-The following icons are displayed from right to left.\n
-Note that each icon is displayed only if available in the current activity:\n
-    Home - Back to previous menu or exit gcompris if at the top\n
-    Thumb - OK. Confirm your answer\n
-    Dice - Display the current level. Click to select another level\n
-    Music note - Repeat the question\n
-    Question Mark - Help\n
-    Tool - The configuration menu\n
-    Tux Plane - About game\n
-The stars means:\n
-    1 Star  - 2 to 3 years old\n
-    2 Stars - 4 to 5 years old\n
-    3 Stars - 6 to 7 years old\n</_manual>
+	 <_manual xml:space="preserve">A simple click on an icon brings you to an activity or a menu of activities.
+At the bottom of the screen is the gcompris control bar.
+The following icons are displayed from right to left.
+Note that each icon is displayed only if available in the current activity:
+    Home - Back to previous menu or exit gcompris if at the top
+    Thumb - OK. Confirm your answer
+    Dice - Display the current level. Click to select another level
+    Music note - Repeat the question
+    Question Mark - Help
+    Tool - The configuration menu
+    Tux Plane - About game
+The stars means:
+    1 Star  - 2 to 3 years old
+    2 Stars - 4 to 5 years old
+    3 Stars - 6 to 7 years old</_manual>
   </Board>
 </GCompris>
