@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <GCompris>
   <Board
-	 name="redraw"
+	 name="redraw_symmetrical"
 	 type="python:redraw"
 	 section="/fun/."
 	 mode="symmetrical"
@@ -9,7 +9,7 @@
 	 icon="boardicons/redraw_symmetry.png"
 	 author="Bruno Coudoin (bruno.coudoin@free.fr)"
 	 boarddir="">
-	 <_title>Redraw the given item</_title>
+	 <_title>Mirror the given item</_title>
 	 <_description>Copy the mirror image of an object from the box
 on the right into the box on the left.</_description>
 	<_prerequisite></_prerequisite>
